--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
   "prettier.configPath": ".prettierrc",
   "prettier.requireConfig": true,
   "prettier.documentSelectors": ["**/*.{ts,tsx,js,jsx,css,scss,html}"],
-  "cSpell.words": ["ecommerce", "Prostore"],
+  "cSpell.words": ["dbgenerated", "ecommerce", "Prostore", "turbopack"],
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   }
