Configure Next.js image optimization for remote images from utfs.io

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
     "ecommerce",
     "neondatabase",
     "Prostore",
-    "turbopack"
+    "turbopack",
+    "utfs"
   ],
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
