Add User, Account, Session, and VerificationToken models to Prisma schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
   "prettier.requireConfig": true,
   "prettier.documentSelectors": ["**/*.{ts,tsx,js,jsx,css,scss,html}"],
   "cSpell.words": [
+    "cuid",
     "dbgenerated",
     "ecommerce",
     "neondatabase",
